--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.3",
+    "formik": "^2.2.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
@@ -15,7 +16,8 @@
     "react-simple-chatbot": "^0.6.1",
     "styled-components": "^5.2.1",
     "use-immer": "^0.4.2",
-    "use-socket.io-client": "^1.1.0"
+    "use-socket.io-client": "^1.1.0",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
