--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.3",
     "formik": "^2.2.6",
     "react": "^16.13.1",
+    "react-animated-slider": "^2.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-native-chatbot": "0.0.1-alpha.12",
